chore: MyPy設定ファイルの統一化 #84
- .mypy.iniファイルを削除し重複解消
- setup.cfgにMyPy設定を一元化
- Flask SQLAlchemy・app.models向け設定を追加
- Pre-commit設定との整合性を確保

--- a/setup.cfg
+++ b/setup.cfg
@@ -52,6 +52,13 @@ exclude =
     build,
     dist
 
+# MyPy module-specific settings
+[mypy-flask_sqlalchemy.*]
+ignore_missing_imports = true
+
+[mypy-app.models.*]
+disable_error_code = name-defined
+
 [tool:pytest]
 testpaths = tests
 python_files = test_*.py
