--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -74,9 +74,13 @@ jobs:
         flake8 app/
         mypy app/
 
-    - name: Security scan
+    # セキュリティテスト並行実行
+    - name: Security Tests - Bandit
       run: |
         bandit -r app/ -f json -o bandit-report.json || true
+
+    - name: Security Tests - Safety
+      run: |
         safety check --json --output safety-report.json || true
 
     - name: Upload coverage reports
@@ -172,9 +176,13 @@ jobs:
         flake8 app/
         mypy app/
 
-    - name: Security Tests (parallel)
+    # セキュリティテスト並行実行
+    - name: Security Tests - Bandit
       run: |
         bandit -r app/ -f json -o bandit-report.json || true
+
+    - name: Security Tests - Safety
+      run: |
         safety check --json --output safety-report.json || true
 
     - name: Performance Tests
